k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: beyond-the-fringe
  labels:
    app.kubernetes.io/name: beyond-the-fringe-namespace
    app.kubernetes.io/part-of: beyond-the-fringe
