k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beyond-the-fringe
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: beyond-the-fringe-pod
      app.kubernetes.io/part-of: beyond-the-fringe
  template:
    metadata:
      labels:
        app.kubernetes.io/name: beyond-the-fringe-pod
        app.kubernetes.io/part-of: beyond-the-fringe
    spec:
      containers:
      - name: beyond-the-fringe
        image: harbor.intergalactic.dev/simple/beyondthefringe
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
